--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </body>
 <script src="js/jquery.min.js"></script>
-<script src="js/tab.js"></script>
+<script src="src/tab.js"></script>
 <script>
     new Tab({
         selector: 'wj-tab',
